<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.leafcastle.android.servicesdemo.MainActivity"
    android:id="@+id/relativeLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bg_service"
        android:id="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_bg_service"
        android:id="@+id/btnStartBgService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_bg_service_stop"
        android:id="@+id/btnStopBgService"
        app:layout_constraintLeft_toRightOf="@+id/btnStartBgService"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/btnStartBgService" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bound_service"
        android:id="@+id/textView2"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartBgService"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_bind_counting_service"
        android:id="@+id/btnBindCoutningService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_unbind_counting_service"
        android:id="@+id/btnUnbindCountingService"
        app:layout_constraintLeft_toRightOf="@+id/btnBindCoutningService"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/btnBindCoutningService" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_count"
        android:id="@+id/btnGetCount"
        app:layout_constraintTop_toTopOf="@+id/btnUnbindCountingService"
        app:layout_constraintLeft_toRightOf="@+id/btnUnbindCountingService"
        app:layout_constraintStart_toEndOf="@+id/btnUnbindCountingService" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_intent_service"
        android:id="@+id/lblIntentService"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBindCoutningService"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_foo"
        android:id="@+id/btnFoo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblIntentService"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_baz"
        android:id="@+id/btnBaz"
        app:layout_constraintTop_toTopOf="@+id/btnFoo"
        app:layout_constraintLeft_toRightOf="@+id/btnFoo"
        app:layout_constraintStart_toEndOf="@+id/btnFoo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        android:id="@+id/btExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtToUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="will be updated from AsynchTask after 5 secs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btExit" />
</android.support.constraint.ConstraintLayout>
